[gd_scene load_steps=13 format=3 uid="uid://b50jnsr1emch2"]

[ext_resource type="Texture2D" uid="uid://s5hchckmjbv2" path="res://assets/img/what_is_our_heading-0011-sheet.png" id="1_t62po"]
[ext_resource type="Script" uid="uid://d13kmjen26iwy" path="res://chameleonardo/head.gd" id="2_cns5y"]
[ext_resource type="Texture2D" uid="uid://cy2hqrjani3ot" path="res://assets/img/eye_eye_captain-sheet.png" id="2_t62po"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_14qgy"]
size = Vector2(217.99997, 434)

[sub_resource type="AtlasTexture" id="AtlasTexture_14qgy"]
atlas = ExtResource("2_t62po")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fsurm"]
atlas = ExtResource("2_t62po")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_04num"]
atlas = ExtResource("2_t62po")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ju7in"]
atlas = ExtResource("2_t62po")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pbch"]
atlas = ExtResource("2_t62po")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6d5d"]
atlas = ExtResource("2_t62po")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_7pbch"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_14qgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fsurm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04num")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ju7in")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pbch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6d5d")
}],
"loop": true,
"name": &"eye",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mul50"]
size = Vector2(217.99997, 434)

[node name="Head" type="Sprite2D"]
texture_filter = 1
texture = ExtResource("1_t62po")
offset = Vector2(16, 0)
script = ExtResource("2_cns5y")

[node name="LeftEyeSensor" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(9, 0)

[node name="Shape" type="CollisionShape2D" parent="LeftEyeSensor"]
position = Vector2(1, -109)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_14qgy")

[node name="LeftEye" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(22, -10)
sprite_frames = SubResource("SpriteFrames_7pbch")
animation = &"eye"

[node name="RightEyeSensor" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(9, 0)

[node name="Shape" type="CollisionShape2D" parent="RightEyeSensor"]
position = Vector2(1, 109)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_mul50")

[node name="RightEye" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(22, 11)
sprite_frames = SubResource("SpriteFrames_7pbch")
animation = &"eye"

[connection signal="area_entered" from="LeftEyeSensor" to="." method="_on_left_eye_sensor_area_entered"]
[connection signal="area_exited" from="LeftEyeSensor" to="." method="_on_left_eye_sensor_area_exited"]
[connection signal="area_entered" from="RightEyeSensor" to="." method="_on_right_eye_sensor_area_entered"]
[connection signal="area_exited" from="RightEyeSensor" to="." method="_on_right_eye_sensor_area_exited"]
